# accelerate-database_queries_using_gpu

./: .gitignore  README.md  Taskfile.yaml  bash.exe.stackdump  export_data.sh  generate_data.sh  mypy.ini  pyproject.toml
log/1/log/: heavydb.INFO  (+1 more)
report/: README.md  pre.typ  template.typ
src/: .env.example  benchmark_heavydb.ipynb  heavy.ipynb  heavydb_connector.ipynb
src/accelerate_database_queries_using_gpu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chart/: colChart_duckdb.py  colChart_heavyDB.py  create_file_duckdb.py  create_file_heavdb.py  lineChart.py  lineChart_duckDB.py  lineChart_mem.py  lineChart_time.py
src/compare_cost_cpu_gpu_chart/: Compare_cost.py  compare_chart.py  compare_cpu_gpu_chart.py  compare_test.py  evaluation_results.txt
src/duckdb/: README.md  benchmark.sh  main.sh  main_2.sh  setup.sh
src/heavydb/: README.md
src/heavydb_with_tpcds/: Benchmark_Heavydb.ipynb  README.txt  main.sh  main_reboot.sh
src/report/: Makefile  chapter1.typ  chapter2.typ  chapter3.typ  chapter4.typ  chapter5.typ  cover.typ  main.typ  main_thucNghiem.typ  pre.typ  refs.yml  thucNghiem.typ  thucNghiem_tpcds.typ  util.typ
src/scripts/: format-sql.js  package-lock.json  package.json
src/tpcds/: .gitignore  README.md  convert_to_lf.sh  cp.sh  gen_data.sh  gen_queries.sh  gen_schema.py  gen_schema.sh  gen_schema_data.py  generate_queries.sh  gq.sh  load_data.sql  reformat.sh  reformat_data.sh  remove_primary_key.py  remove_primary_keys.sh  tpcds-schemas.ipynb
tpcds/: tpcds.sql
tpcds/tools/: .ctags_updated  distcomp  dsdgen  dsqgen
(+1382 files in other folders)
