[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerate-database_queries_using_gpu"
version = "0.1.0"
requires-python = "==3.12.7"
dependencies = [
    "ipykernel==6.29.5",
    "ipython==8.12.3",
    "jupyterlab==4.2.5",
    "matplotlib-inline==0.1.7",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "setuptools==75.3.0",
    "language-tool-python>=2.8.1",
    "heavyai",
    "python-dotenv>=1.0.1",
    "iplantuml>=0.1.1",
    "plantuml>=0.3.0",
]

[tool.ruff]
line-length = 88
